--- a/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -1,1 +1,24 @@
-<p>pais-tabla works!</p>
+<table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Bandera</th>
+        <th scope="col">Nombre</th>
+        <th scope="col">Población</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let pais of paises ; let i = index">
+        <th scope="row">{{i+1}}</th>
+        <td>
+          <img src={{pais.flags.png}} class="small-flag">
+        </td>
+        <td>{{pais.name.common}}</td>
+        <td>{{pais.population|number}}</td>
+        <td>
+            <a [routerLink]="['/pais' , pais.cca2]">Ver más...</a>
+        </td>
+      
+      </tr>
+    </tbody>
+  </table>
