--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -3,40 +3,17 @@
 
 <div class="row">
     <div class="col">
-        <form   (ngSubmit)="buscar()" 
-                autocomplete="off">
-            <input type="text"
-                    name="termino"
-                    [(ngModel)]="termino"                    
-                    class="form-control"
-                    placeholder="Buscar país...">
-        </form>
+        <app-pais-input 
+            (onEnter)="buscar( $event )"
+            (onDebouncer)="sugerencias( $event )">
+        </app-pais-input>
     </div>
 </div>
 <hr *ngIf="hayError === true">
 <div class="alert alert-danger" *ngIf="hayError === true">No se encontró nada con el término {{termino}}</div>
 <hr>
-<table *ngIf="paises.length > 0" class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Bandera</th>
-        <th scope="col">Nombre</th>
-        <th scope="col">Población</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let pais of paises ; let i = index">
-        <th scope="row">{{i+1}}</th>
-        <td>
-          <img src={{pais.flags.png}} class="small-flag">
-        </td>
-        <td>{{pais.name.common}}</td>
-        <td>{{pais.population|number}}</td>
-        <td>
-            <a [routerLink]="['/pais' , pais.cca2]">Ver más...</a>
-        </td>
-      
-      </tr>
-    </tbody>
-  </table>
+<div *ngIf="paises.length > 0" class="row">
+    <div class="col">
+        <app-pais-tabla [paises]="paises"></app-pais-tabla>
+    </div>
+</div>
