--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -5,7 +5,8 @@
     <div class="col">
         <app-pais-input 
             (onEnter)="buscar( $event )"
-            (onDebouncer)="sugerencias( $event )">
+            (onDebouncer)="sugerencias( $event )"
+            place = "Buscar pais...">
         </app-pais-input>
     </div>
 </div>
