--- a/src/app/pais/pages/ver-region/ver-region.component.html
+++ b/src/app/pais/pages/ver-region/ver-region.component.html
@@ -1,1 +1,32 @@
-<p>ver-region works!</p>
+<div *ngIf="!pais; else divPais" class="alert alert-info">
+    Espere por favor...
+</div>
+<ng-template #divPais>
+    <div class="row">
+        <div class="col-12">
+            <h1>PAIS: <small>{{pais.name}}</small></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-4">
+            <h3>Bandera</h3>
+            <img src={{pais.flags.png}} alt="bandera" class="img-thumbnail">
+        </div>
+        <div class="col">
+            <h3>Información</h3>
+            <ul class="list-group">
+                <li class="list-group-item">
+                    <strong>Población: {{pais.population | number}}</strong>
+                </li>
+                <li class="list-group-item">
+                    <strong>Area: {{pais.area | number}}</strong>
+                </li>            
+                <li class="list-group-item">
+                    <strong>Región: {{pais.region}}</strong>
+                </li>              
+            </ul>
+        </div>
+        <div>{{pais | json}}</div>        
+    </div>
+
+</ng-template>
