--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,21 @@
-<p>por-region works!</p>
+<h2>Por Region <small>{{regionActiva | titlecase}}</small></h2>
+<hr>
+
+<!-- [class.btn-primary] = "region === regionActiva" -->
+<div class="btn-group">
+    <button *ngFor="let region of regiones " 
+            type="button" 
+            class="btn btn-outline-primary"
+            [ngClass]="{
+                    'btn-primary': regionActiva === region,
+                    'btn-outline-primary': region !== regionActiva
+                }"  
+            (click) = "verRegionActiva(region)"
+            >{{region}}</button>
+  </div>
+
+  <div *ngIf="region.length> 0 " class="row">
+    <div class="col">
+        <app-pais-tabla [paises] = "region"></app-pais-tabla>
+    </div>
+  </div>
