--- a/src/app/pais/pages/ver-region/ver-region.component.html
+++ b/src/app/pais/pages/ver-region/ver-region.component.html
@@ -26,7 +26,7 @@
                 </li>              
             </ul>
         </div>
-        <div>{{pais | json}}</div>        
+        <!-- <div>{{pais | json}}</div>         -->
     </div>
 
 </ng-template>
